--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ MAIN
 .blackbg {
   position: absolute;
   background-color: rgb(57, 69, 93, 85%);
-  height: 36vh;
+  /* height: 34zvh; */
   width: 100vw;
   bottom: 0px;
   z-index: 1;
@@ -129,8 +129,8 @@ MAIN
   width: fit-content;
 }
 .dot {
-  height: 10px;
-  width: 10px;
+  height: 6px;
+  width: 6px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -167,9 +167,10 @@ MAIN
   justify-content: center;
 }
 .thumb img {
-  padding: 10px;
-  height: 150px;
-  width: 200px;
+  /* padding: 2px; */
+  width: 100%;
+  /* height: 150px;
+  width: 200px; */
 }
 .thumb li {
   display: inline;
